--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Edabit's String Challenges</h1>
 </body>
-<script src="Day1.js"></script>
+<!-- <script src="Day1.js"></script> -->
+<script src="Day2.js"></script>
 </html>
