--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Edabit's String Challenges</h1>
 </body>
 <!-- <script src="Day1.js"></script> -->
-<script src="Day2.js"></script>
+<!-- <script src="Day2.js"></script> -->
+<script src="Day3.js"></script>
 </html>
